# group-debug-deploy-expert

./: .gitignore  ARCHITECTURE.md  COMPETITIVE_ADVANTAGE.md  DEPLOYMENT_GUIDE.md  MARKETPLACE_SUBMISSION_GUIDE.md  MULTI_PLATFORM_PUBLISH_GUIDE.md  README.md  TECHNICAL_DEBT.md  USER_GUIDE.md  USE_CASES.md  WEB_PUBLISH_GUIDE.md  auto-publish.ps1  backup_filelist.txt  compare_result.txt  compliance_export.json  current_filelist.txt  demo_config.json.lockmeta  diff_result.txt  install.ps1  nginx_beijixing-ai.conf  package.json
.logs/: exported_full_log.json
.quarantine/: 20260531_213251_compare_backup.py
.trae/rules/: project_rules.md  tier0_manifest.yml
.trae/skills/pm-tripartite-anti-hallucination-system/: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  RELEASE_NOTES.md  SKILL.md  acceptor_tools.py  auditor_tools.py  config.py  demo_complete_self_driving.py  demo_enhanced_frontmatter.py  demo_file_locking.py  demo_full_lifecycle.py  demo_role_logs.py  dispatcher.py  dispatcher_update.py  example_file.py  file_lock_manager.py  main.py  main_v2.py  models.py  models_v2.py  publish.ps1  pyproject.toml  quick-publish.ps1  requirements.txt  role_logs.py  self_driving_engine.py  setup.py  start.bat  start.sh  tools.py  tools_impl.py
.trae/skills/pm-tripartite-anti-hallucination-system/.github/workflows/: ci-cd.yml
.trae/skills/pm-tripartite-anti-hallucination-system/tests/: conftest.py  test_config.py  test_dispatcher.py  test_file_lock_manager.py  test_models.py  test_role_logs.py  test_self_driving_engine.py  test_tools.py
backend/: BeijixingAI_Postman_Collection.json  DEPLOYMENT.md  Dockerfile  JVM_MONITORING_SETUP.md  POSTMAN_TEST_GUIDE.md  QUICK_DEPLOY.md  SYNC_CHECKLIST.md  application-prod.yml  build-bx-user-sms.bat  build-monolith.bat  deploy.sh  pom.xml  setup-jvm-monitoring.sh  start-app.sh  sync-to-server.bat  sync-to-server.sh
backend/beijixing-app/: pom.xml
backend/bx-ai/: pom-fixed.xml  pom.xml
backend/bx-billing/: .gitignore  README.md  pom.xml
backend/bx-common/: pom.xml
backend/bx-content/: pom.xml
backend/bx-data/: README.md  pom.xml
backend/bx-lead/: README.md  pom.xml
backend/bx-message/: README.md  pom.xml
backend/bx-monitor/: pom.xml
backend/bx-risk/: README.md  pom.xml
backend/bx-schedule/: pom.xml
backend/bx-social/: pom.xml
backend/bx-storage/: README.md  pom.xml
backend/bx-system/: pom.xml
backend/bx-task/: pom.xml
backend/bx-tenant/: README.md  pom.xml
backend/bx-user/: README.md  pom.xml
demo_self_driving_complete/src/: payment.py
deploy/: audit-local.sh  audit-remote.sh  clean-old-configs.sh  clean-remote-src.sh  deploy-incremental.sh  deploy-monolith-guide.md  docker-compose.monitor.yml  final-build-start.sh  find-conflicts.sh  full-rebuild-final.sh  full-rebuild-start.sh  nginx-beijixing-ai.conf  start-app.sh  start-with-web.sh  sync-code-to-server.bat  sync-configs-from-local.bat  test-start-single.sh
deploy/docker/: .env.example  README.md  build-all-services.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.ultra-fast.yml  docker-compose.yml
deploy/k8s/: README.md  configmap.yaml  deploy.sh  namespace.yaml  secret.yaml
deploy/monolith-package/: .env.dev  .env.prod.example  .env.test  DEPLOY-GUIDE.md  README.md  application.yml  start.bat  start.sh  stop.sh
deploy/nginx/: beijixing-ai.conf  nginx.conf
deploy/scripts/: ARCHITECTURE.md  check-server-consistency.ps1  db-check.sh  db-consolidate.sh  db-detail.sh  db-final-verify.sh
docs/: API.md  BACKEND_REVIEW_REPORT_v2.md  openapi.yaml  前端集成测试报告.md  北极星AI商机获客系统-逐项比对报告.md  基础设施启动报告.md  基础设施服务状态.md  数据库完整性检查报告.md  本地vs远程服务器一致性校验指南.md  本地与远程服务器同步协议-SOP.md  深度审计差异分析总报告.md  深度需求对比分析报告.md  环境准备报告.md  编译打包报告.md  编译统计报告.md  联调测试报告.md  集成测试报告.md
docs/api/: user-api.md
docs/deployment/: deploy-guide.md
mobile/ios/: Podfile  (+4 more)
scripts/: frontend-test.sh
src/: demo_concurrent_edit.txt.lockmeta  demo_test_module.py  integrated_module.py.lockmeta
(+1263 files in other folders)
